--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>乘法測驗</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="main.py"></script>
 </body>
 </html>
