--- a/calculate.html
+++ b/calculate.html
@@ -7,7 +7,7 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 </head>
 <body>
-    <py-script src="c:/Users/sogah/OneDrive/桌面/py4e/BraveCow.py"></py-script>
+    <py-script src="https://github.com/tommyhelf/Calculate/blob/BraveCow/BraveCow.py"></py-script>
 </body>
 </html>
 
