--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>乘法測驗</title>
 </head>
 <body>
-    <script src="勇敢牛牛.py"></script>
+    <py-script src="c:/Users/sogah/OneDrive/桌面/py4e/BraveCow.py"></py-script>
 </body>
 </html>
