--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>乘法測驗</title>
 </head>
 <body>
-    <script src="勇敢牛牛.py"></script>
+    <py-script src="https://github.com/tommyhelf/Calculate/blob/BraveCow/BraveCow.py"><py-script>
 </body>
 </html>
