--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>乘法測驗</title>
 </head>
 <body>
-    <py-script src="c:/Users/sogah/OneDrive/桌面/py4e/BraveCow.py"></py-script>
+    <py-script>
+    print ("hello world")
+    </py-script>
 </body>
 </html>
